[package]
name = "dist_sys_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "unique_id"
path = "src/unique_id.rs"

[[bin]]
name = "broadcast"
path = "src/broadcast.rs"

[dependencies]
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
