[package]
name = "dist_sys_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique_id"
path = "src/bin/unique_id.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast.rs"

[[bin]]
name = "kafka"
path = "src/bin/kafka.rs"

[dependencies]
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
glob = { version = "0.3" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
